--- a/requirements_1.txt
+++ b/requirements_1.txt
@@ -1,66 +1,4 @@
-# ========== 模型与推理 ==========
-torch==2.6.0                 # 保留最新版本，替代2.0.1
-torchvision==0.21.0
-transformers==4.49.0        # 保留精确版本，替代>=4.38.2
-accelerate==1.4.0
-peft==0.14.0
-trl==0.15.1
-flash-attn==2.7.4.post1
-sentence-transformers==4.0.1
-janus==2.0.0
-einops                         # 无版本冲突，保留
-
-# ========== 模型工具 ==========
-timm==0.9.16
-sentencepiece                 # 与 SentencePiece==0.1.96 重复，统一写法
-attrdict
-
-# ========== Tokenizer / 编码器 ==========
-tokenizers==0.21.1
-tiktoken==0.9.0               # 覆盖旧版本 0.5.2
-safetensors==0.5.2
-
-# ========== 可视化与服务 ==========
-gradio==5.17.1
-gradio-client==1.7.1
-streamlit==1.45.1
-fastapi==0.115.8
-uvicorn==0.34.0
-
-# ========== 图像与绘图 ==========
-pillow==11.1.0
-opencv-python-headless==4.11.0.86
-matplotlib==3.10.0
-seaborn==0.13.2
-
-# ========== 数据与处理 ==========
-numpy==1.26.4
-pandas==1.5.3
-scikit-learn==1.5.0
-datasets==3.2.0
-evaluate==0.4.3
-
-# ========== 文本处理与评估 ==========
-nltk==3.9.1
-rouge-score==0.1.2
-rouge-chinese==1.0.3
-sacrebleu==2.5.1
-regex==2024.11.6
-pypinyin==0.50.0
-mdtex2html==1.3.0
-markdown==3.4.1
-Pygments==2.12.0
-colorama==0.4.5
-
-# ========== 网络与异步 ==========
-aiofiles==23.2.1
-aiohttp==3.11.12
-httpx==0.27.2
-requests==2.32.3
-
-# ========== 辅助工具 ==========
-pyyaml==6.0.2
-jsonlines==4.0.0
-tqdm==4.67.1                 # 覆盖旧版本 4.64.0
-protobuf==5.29.3
-huggingface-hub==0.29.1
+torch>=2.0.0
+transformers>=4.38.0
+streamlit>=1.25.0
+Pillow
